--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- Weight ranges adapted to required in style guide is that oke? -->
+		<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,500..700;1,9..144,500..700&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<link rel="stylesheet" href="styles.css" />
+		<title>Frontend Mentor | Product preview card component</title>
+	</head>
+	<body>
+		<main>
+			<article class="product-tile">
+				<picture class="product-image">
+					<source srcset="images/image-product-desktop.jpg" media="(min-width: 40rem)" />
+					<img src="images/image-product-mobile.jpg" alt="Gabrielle Essence eau de parfum bottle" width="686" height="480" />
+				</picture>
 
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+				<div class="product-content">
+					<header>
+						<div class="product-tag">Perfume</div>
+						<h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+					</header>
+					<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+					<div class="product-pricing">
+						<div class="product-price">$149.99</div>
+						<div class="product-price-old">$169.99</div>
+					</div>
+					<button class="button-primary"><img class="button-icon" src="images/icon-cart.svg" alt="" width="15" height="15" />Add to Cart</button>
+				</div>
+			</article>
+		</main>
+		<footer class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Ineke</a>.</footer>
+	</body>
 </html>
