--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<!-- Weight ranges adapted to required in style guide is that oke? -->
 		<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,500..700;1,9..144,500..700&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet" />
 
 		<link rel="stylesheet" href="styles.css" />
 		<title>Frontend Mentor | Product preview card component</title>
 	</head>
-	<body>
+	<body class="montserrat-medium">
 		<main>
 			<article class="product-tile">
 				<picture class="product-image">
@@ -24,14 +23,14 @@
 				<div class="product-content">
 					<header>
 						<div class="product-tag">Perfume</div>
-						<h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+						<h1 class="product-name fraunces-bold">Gabrielle Essence Eau De Parfum</h1>
 					</header>
 					<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 					<div class="product-pricing">
-						<div class="product-price">$149.99</div>
+						<div class="product-price fraunces-bold">$149.99</div>
 						<div class="product-price-old">$169.99</div>
 					</div>
-					<button class="button-primary"><img class="button-icon" src="images/icon-cart.svg" alt="" width="15" height="15" />Add to Cart</button>
+					<button class="button-primary"><img src="images/icon-cart.svg" alt="" width="15" height="15" />Add to Cart</button>
 				</div>
 			</article>
 		</main>
